# MiniGameJamDecember2018

./: CMakeLists.txt  idea  themes
src/: Application.cpp  GameWindow.cpp
src/DrawObjects/: PolyShape.h
src/Ingame/: AttributesOverlay.cpp  AttributesOverlay.h  Cake.cpp  Cake.h  IngameScene.cpp  IngameScene.h  LevelObject.cpp  LevelObject.h  ModulateableObject.cpp  ModulateableObject.h  Player.cpp  Player.h  ValueChangerProjectile.cpp  ValueChangerProjectile.h
src/Ingame/Details/: TerrainObject.cpp  TerrainObject.h
src/Ingame/GameTiles/: Tile.cpp  Tile.h
src/Ingame/Levels/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h
src/Menu/: MenuScene.cpp
src/UI/: Button.cpp  Button.h  TextField.cpp  TextField.h
