cmake_minimum_required(VERSION 3.9)
project(MGJDEC18)

set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp)

add_executable(MGJDEC18 ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(MGJDEC18 pthread)
TARGET_LINK_LIBRARIES(MGJDEC18 Box2D)
TARGET_LINK_LIBRARIES(MGJDEC18 stdc++fs)
TARGET_LINK_LIBRARIES(MGJDEC18 sfml-system)
TARGET_LINK_LIBRARIES(MGJDEC18 sfml-audio)
TARGET_LINK_LIBRARIES(MGJDEC18 sfml-graphics)
TARGET_LINK_LIBRARIES(MGJDEC18 sfml-window)
TARGET_LINK_LIBRARIES(MGJDEC18 sfml-network)
TARGET_LINK_LIBRARIES(MGJDEC18 m)
